expanded converters